# pipecat_voice_agent

./: .gitignore  bot.py  main.py  pyproject.toml  server.py  server_utils.py  system_prompt.txt
flows/: example_flow.py  property_inquiry.py  weather_info_flow.py
