[project]
name = "pipecat-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pipecat-ai[kokoro,ollama,runner,webrtc,whisper,deepgram,cartesia]>=1.3.0",
    "twilio>=9.10.9",
    "websockets>=16.0",
]
